clusters/cl01tl/manifests/outline/HTTPRoute-outline.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: outline
  labels:
    app.kubernetes.io/instance: outline
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: outline
    helm.sh/chart: outline-5.3.0
  namespace: outline
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: "traefik"
  hostnames:
    - "outline.alexlebens.dev"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: outline
          namespace: outline
          port: 3000
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
